--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <h1 class="display-5 fw-normal">Bootstrap Page</h1>
         <p class="justify-content-center">Create this</p>
       </div>
-      <ul class="nav justify-content-center bg-light fw-bold">
+      <ul class="nav justify-content-center bg-light fw-semibold border-bottom">
         <li class="nav-item">
           <a class="nav-link active" aria-current="page" href="#">Home</a>
         </li>
@@ -65,22 +65,22 @@
         >
           <div class="card bg-primary mb-3" style="max-width: 18rem">
             <div class="card-body">
-              <h5 class="card-title">Primary card title</h5>
+              <h5 class="card-title">First Card</h5>
             </div>
           </div>
           <div class="card text-bg-warning mb-3" style="max-width: 18rem">
             <div class="card-body">
-              <h5 class="card-title">Warning card title</h5>
+              <h5 class="card-title">Second Card</h5>
             </div>
           </div>
           <div class="card bg-success mb-3" style="max-width: 18rem">
             <div class="card-body">
-              <h5 class="card-title">Success card title</h5>
+              <h5 class="card-title">Third Card</h5>
             </div>
           </div>
           <div class="card bg-danger mb-3 text-center" style="max-width: 18rem">
             <div class="card-body">
-              <h5 class="card-title">Danger card title</h5>
+              <h5 class="card-title">Fourth Card</h5>
             </div>
           </div>
         </div>
