--- a/index.html
+++ b/index.html
@@ -86,7 +86,9 @@
         </div>
       </section>
     </main>
-    <footer class="container-fluid text-center bg-info p-3">Footer!</footer>
+    <footer class="container-fluid text-center bg-info p-3 fixed-bottom">
+      Footer!
+    </footer>
     <!-- JavaScript Bundle with Popper -->
     <!-- <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
